--- a/Real Phone/style.css
+++ b/Real Phone/style.css
@@ -1,25 +1,67 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family:sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
-.main{
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    /* position: relative
+.main {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  /* position: relative
 Относительное позиционирование сдвигает элемент относительно его обычного положения.  */
-    overflow: hidden;
-    background: linear-gradient(to right, #9c27b0, #8ecdff);
+  overflow: hidden;
+  background: linear-gradient(to right, #9c27b0, #8ecdff);
 }
 
-nav{
-    width: 80%;
-    position: sticky;
-    margin: 20px auto;
-    z-index: 1;
-    display: flex;
-    align-items: center;
+nav {
+  width: 80%;
+  position: sticky;
+  margin: 20px auto;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+}
 
+.logo {
+  flex-basis: 20%;
+  /* flex-basis
+CSS свойство flex-basis задаёт базовый размер 
+флекс элемента по основной оси. Это свойство определяет размер контент-бокса, если 
+не задано иначе через */
+}
+
+.logo img {
+  width: 150px;
+}
+
+.nav-links {
+  flex: 1;
+  text-align: right;
+}
+
+.nav-links ul {
+  list-style: none;
+  display: inline-block;
+  /* Блочные (block) элементы имеют высоту, ширину, padding, margin, border, а также
+     располагаются вертикально, друг под другом.
+    Строчные (inline) элементы располагаются горизонтально, друг за другом.
+    Элементы inline-block обладают характеристиками как блочных, так и строчных элементов. */
+  margin: 0 20px;
+}
+
+.nav-links ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.information {
+  width: 1000px;
+  height: 1000px;
+  position: absolute;
+  top: 50%;
+  left: -10%;
+  transform: translateY(-50%);
+  /*  */
+  /* 5:58 */
 }
