--- a/Real Phone/style.css
+++ b/Real Phone/style.css
@@ -4,6 +4,10 @@
   font-family: sans-serif;
 }
 
+.body{
+  size: 80%;
+}
+
 .main {
   width: 100%;
   height: 100vh;
@@ -56,11 +60,11 @@ CSS свойство flex-basis задаёт базовый размер
 }
 
 .information {
-  width: 1000px;
+  width: 830px;
   height: 1000px;
   position: absolute;
   top: 50%;
-  left: 0;
+  left: -10%;
   transform: translateY(-50%);
   /*  */
   /* 5:58 */
@@ -76,6 +80,10 @@ CSS свойство flex-basis задаёт базовый размер
   /* background: #ccc; */
   /* 15^00 */
   transform: rotate(0deg);
+  transition: 1s; 
+  /*it might make phone features rotating slower*/
+  /* background-color: #000; */
+  z-index: -1;
 }
 
 
@@ -99,24 +107,27 @@ CSS свойство flex-basis задаёт базовый размер
 }
 
 .one{
-  /*margin-*/top: 450px;
+   /*margin-*/top: 450px;
   /*margin-*/right: 50px;
 }
 
 .two{
   top: 150px;
   left: 350px;
+  transform: rotate(-90deg);
 }
 
 .three{
   bottom: 450px;
   left: 50px;
+  transform: rotate(180deg);
 }
 
 .four{
   bottom: 150px;
   right:350px;
   /* 9:28 */
+  transform: rotate(90deg);
 }
 
 
@@ -154,13 +165,28 @@ CSS свойство flex-basis задаёт базовый размер
 #upBtn{
   width: 15px;
   cursor: pointer;
+  /* size: 15%;   */
 }
 
 #downBtn{
   width: 15px;
   cursor: pointer;
-  transform: rotate(3.142rad);
-  /* /* rotate(0.5turn); turns an obj */ 
+  transform: rotate(180deg); 
+  /*turns an obj*/ 
+}
+
+.overlay{
+  width: 0;
+  height: 0;
+  border-top: 500px solid #6E48AA;
+  border-right: 500px solid transparent;
+  border-bottom: 500px solid #6627a9;
+  border-left: 500px solid #6932a8;
+  position:absolute; 
+  /* left: 0; */
+  /* top: 0; */
+
+
 }
 
 
