--- a/SAHARA/style.css
+++ b/SAHARA/style.css
@@ -22,6 +22,7 @@
 }
 
 .logo {
+  margin-top: 15px;
   width: 50px;
   cursor: pointer;
 }
@@ -86,8 +87,10 @@ button{
   font-size: 12px 0;
   background: #fff;
   border: 0;
+  margin-top: 20px;
+  padding: 10px 5px 10px 5px;
   border-radius: 20px;
-  outline: none;
+   outline: none; /*kontur of border */
   /* DO NOT FORGET ABOUT FLEXBASIS     ----''''  AND Lorem ipsumtext*/
   /* Box-sizing makes an element staying directly inside of the parent elemnt */
 }
@@ -134,10 +137,14 @@ button{
 
 h5{
   color: #fff;
-  text-shadow: 0 0 5px #999;
+  text-shadow: 0 0 5px #999;   /*to the left, smth, blurring, color*/
   /*  */
 }
 
+.card p{
+    text-shadow: 0 0 15px #000;   /*to the left, smth, blurring, color*/
+  font-size: 8px;
+}
 
 
 
