--- a/Real Phone/style.css
+++ b/Real Phone/style.css
@@ -4,19 +4,42 @@
   font-family: sans-serif;
 }
 
-.body{
-  size: 80%;
-}
-
 .main {
-  width: 100%;
-  height: 100vh;
+  max-width: 100%;
+  min-height: 100vh;
   position: relative;
   /* position: relative
 Относительное позиционирование сдвигает элемент относительно его обычного положения.  */
   overflow: hidden;
   background: linear-gradient(to right, #9c27b0, #8ecdff);
 }
+
+/* @media (max-width:1200px) {
+  .main{
+    max-width: 970px;
+  }
+}
+
+@media (max-width:992px) {
+  .main{
+    max-width: 750px;
+  }
+}
+
+@media (max-width:767px) {
+  .main{
+    max-width: none;
+  }
+  .information{
+    max-width: 400px;
+    height: 700px;
+  }
+
+} */
+
+
+
+
 
 nav {
   width: 80%;
@@ -38,9 +61,15 @@ CSS свойство flex-basis задаёт базовый размер
 .logo img {
   width: 150px;
 }
+/* @media(max-width:450px){
+  .logo img{
+    width: 100px;
+  }
+} */
 
 .nav-links {
   flex: 1;
+  /* позволяет элементу flex расширяться и заполнять доступное пространство */
   text-align: right;
 }
 
@@ -66,6 +95,7 @@ CSS свойство flex-basis задаёт базовый размер
   margin: 15px;
 }
 
+
 .information {
   width: 830px;
   height: 1000px;
@@ -78,6 +108,7 @@ CSS свойство flex-basis задаёт базовый размер
 }
 
 #circle{
+  text-align: center;
   width: 1000px;
   height: 1000px;
   position: absolute;
@@ -91,7 +122,17 @@ CSS свойство flex-basis задаёт базовый размер
   /*it might make phone features rotating slower*/
   /* background-color: #000; */
   z-index: -1;
+  /* background-color: #000; */
 }
+/* @media (max-width:1200px) {
+  #circle .one .two .three .four{
+    padding: 0 0 150px 0;
+  }
+  #circle{
+    width: 800px;
+
+  }
+} */
 
 
 .feature img{
