--- a/SAHARA/style.css
+++ b/SAHARA/style.css
@@ -33,62 +33,15 @@ body{
   /* justify-content: flex-start; */
 }
 
-@media (max-width:1350px) {
-  /* .container{
-    max-width: 970px;
-  } */
-  
-  /* .card .card1 {
-    max-width: 200;
-    max-height: 210;
-  } */
- }
-
-
-
- /* @media (max-width:1200px) {
-  .container{
-    max-width: 830px;
-    margin-left: 10%;
-    
-  } 
-  
- }
-
-@media (max-width:992px) {
-  .container{
-    max-width: 750px;
-  }
-}
-
-@media (max-width:767px) {
-  .container{
-    max-width: none;
-  }
-
-
-}  */
-
-/* .navbar {
-  height: 70px;
-  display: flex;
-  justify-content: space-between;
-  /* flex-direction: row; */
-  /* align-items: center; */
-/* } */
-
-/* nav{ */
-  /* flex-direction: row-reverse; */
-/* } */ 
 
 nav{
   width: 100%;
   /* position: sticky; */
-  padding: 10px 0px ;
+  padding: 10px 0;
   z-index: 1;
   display: inline-flex;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: space-between;
   background-color: rgb(112, 34, 6);
   /* box-sizing: content-box; */
 
@@ -96,24 +49,14 @@ nav{
 
 .logo img{
   width: 60px;
+  padding-left: 15px;
   /* margin-right: 85%; */
 }
-
-@media (min-height:1000px){
-  .logo img{
-  /* width: 60px; */
-  /* margin-right: 40%; */
-}
-.nav-links ul li {
-  /* margin-left: 45%; */
-}
-}
-
 
 
 .nav-links ul li {
   margin-top: 15px;
-  margin-left: 15%;
+  margin-left: -2%;
   /* width: 75%; */
   display: inline-flex;
   /* позволяет элементу flex расширяться и заполнять доступное пространство */
