--- a/Sinai/style.css
+++ b/Sinai/style.css
@@ -11,6 +11,7 @@ body {
   flex-flow: column nowrap;
   justify-content: center;
   margin: 0 18% 0 18%;
+  /* box-sizing: content-box; */
   /* width: 100%; */
   /* height: 100vh; */
   /* padding: 0 15%; */
@@ -45,9 +46,9 @@ h1 {
   /* height: 100vh; */
   border: black 2.48px;
   border-style: dashed;
-  /* display: flex; */
-  /* flex-flow: column wrap; */
-  /* justify-content: center; */
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
 
 }
 
@@ -57,16 +58,20 @@ h1 {
   list-style: none;
   display: flex;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-flow: row wrap;
-  margin: 0;
-  left: 0;
+  margin: 0 5.1% 0 0;
+  /* left: -5%; */
 }
 
 .image {
   margin: 10% 1% 10% 1%;
-  max-width: 27%;
+  max-width: 27.5%;
   border: 2px black solid;
+}
+
+.image p{
+  padding: 0 1.5%;
 }
 
 .image_sights {
@@ -74,6 +79,25 @@ h1 {
   /* max-height: 100px; */
   box-sizing: content-box;
   flex-grow: 1;
+}
+
+.content_nature{
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  box-sizing: content-box;
+  width: 50%;
+  height: auto;
+  margin: 0 8% 0 0;
+} 
+
+.content_nature li{
+  /* list-style: none; */
+}
+
+.big_img{
+  flex-shrink: 1;
+  max-width: 100%;
 }
 
 /* @media only screen and (min-height:1200px){
