--- a/Sinai/style.css
+++ b/Sinai/style.css
@@ -11,7 +11,14 @@ body {
   background-color:  #F0A04B;
   /* color: white; */
   font-size: 18px;
-  width: 100%;
+  /* width: 100vw; */
+}
+
+video{
+  position: absolute;
+  width: 100vw;
+  top: 0;
+  z-index: -10;
 }
 
 .container {
@@ -20,7 +27,7 @@ body {
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
-  margin: 9.675% 18% 0 18%;
+  margin: 9.675% 16% 0 16%;
   box-sizing: content-box;
   /* width: 100%; */
   /* height: 100vh; */
@@ -43,37 +50,115 @@ body {
   left: 0;
 }
 
-.nav .heading{
-  width: relative;
-  height: 90vh;
+.nav .middle_bar{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 30%;
+}
+
+.nav .middle_bar .heading{
+  width: 50%;
+  /* height: 90vh; */
+  display: flex;
+  flex-flow: column ;
+  justify-content: center;
+  align-items: flex-start;
+  /* margin-top: 30%; */
+  margin-left: 7%;
+  padding: 0;
+  font-size: 20px;
+  font-style: bold;
+  color: aliceblue;
+  margin-bottom: 0;
+  margin-top: 2%;
+  box-sizing: content-box;
 }
 
 
+.heading__head{
+  width: 82%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.heading__head h1{
+  font-size: 2.5em;
+}
+
+
+.midle_bar__button{
+  width: 83%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .heading__button{
   background-color: transparent;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  background-color: #fff;
   /* opacity: 0.62; */
-  font-style: "Gloock";
-  border-radius: 3%;
-  padding: 1.5% 3%;
-  color: aliceblue;
+  font-family: "Gloock";
+  /* text-align: center; */
+  border-radius: 45px;
+  padding: 15px 61px;
+  margin: 6% 0 0 0;
+  color: black;
   border: white 1.5px solid;
   /* bottom: none; */
-  font-size: 0.9em;
+  font-size: 1em;
   margin: 1% 0 0 0;
   
   
 }
 
-.heading__text{
-  width: 40%;
-  size: 18px;
+.heading__button:hover{
+  background-color: black;
   color: aliceblue;
 }
+
+.heading__text{
+  width: 84%;
+  size: 20px;
+  color: aliceblue;
+  padding: 0;
+}
+
+.search {
+  display: flex;
+  justify-content: space-between;
+  margin: 5% 14% 0 0;
+  border-bottom: 1.8px solid black;
+  width: 80%;
+}
+
+.middle_bar__search{
+  background-color: none;
+  color: white;
+  background: transparent;
+  border: none;
+  outline: none;
+  font-size: 1em;
+  /* width: 200%; */
+  
+}
+
+.middle_bar__search::placeholder{
+  color: black;
+  font-style: normal;
+  font-size: 15px;
+}
+
+.search__img{
+  width: 3.2%;
+  height: 3.2%;
+}
+
+
+
+
+
 
 .nav .map{
   width: 100vw;
@@ -103,6 +188,12 @@ body {
   margin: 0 5% 0 5%;
 }
 
+.nav .map .link:hover{
+  /* color: black; */
+  border-bottom: 1px white solid;
+
+}
+
 
 
 .nav .map .logo{
@@ -122,23 +213,26 @@ body {
 
 
 
-video{
-  position: absolute;
-  width: 100vw;
-  top: 0;
-  z-index: -10;
-}
 
-.heaging h1 {
-  font-size: 4em;
-  color: aliceblue;
-  margin-bottom: 0;
-  margin-top: 6%;
-}
 
-.heaging p{
 
-}
+
+/* add */
+/* links' */
+/* animation */
+/* !!! */
+
+
+
+
+
+
+
+
+
+
+
+
 
 #black {
   color: black;
