--- a/Sinai/adaptive_halfscreen.css
+++ b/Sinai/adaptive_halfscreen.css
@@ -1,28 +1,29 @@
-/* @media all and (max-width:1350px){
+ @media (max-width:1350px){
   video{
+    z-index:-200; 
     width: 100%;
     height: 100vw;
     object-fit: cover;
-    /*lkrlrslkknlnlknlknlklnklnkbkh))))))))))))))))))))))))  */
-  /* }
+       }
   .nav .map {
-    /* margin: 0; */
-  /* }
+    margin: 0;
+    
+  }
   .nav .map .links{
     margin: 0 0 0 7%;
-  } */
+  }
 
 
-  /* .heading__text{
+  .heading__text{
     margin-left: 10%;
     margin-top: 5%;
     margin-bottom: 4%;
     padding: 0;
     
-    /* border: solid; */
-  /* } */
-/* } */ 
+    
+  }
+} 
 
-/* @media all and (max-width:1350px){
+@media all and (max-width:1350px){
   
-} */
+} 
