--- a/Sinai/adaptive_halfscreen.css
+++ b/Sinai/adaptive_halfscreen.css
@@ -13,10 +13,12 @@
     margin: 0 0 0 7%;
   }
 
-
+  .heading h1{
+    margin-top: 30%;
+  }
   .heading__text{
     margin-left: 10%;
-    margin-top: 5%;
+    margin-top: 3%;
     margin-bottom: 4%;
     padding: 0;
     
@@ -24,6 +26,6 @@
   }
 } 
 
-@media all and (max-width:1350px){
+@media (max-width: px){
   
 } 
