--- a/Sinai/style.css
+++ b/Sinai/style.css
@@ -14,7 +14,14 @@ body {
   /* box-sizing: content-box; */
   overflow-x: hidden;
   width: 100%;
-  border: solid;
+  /* border: solid; */
+}
+
+@media all {
+  body{
+    overflow-x: hidden;
+  }
+  
 }
 
 video{
@@ -175,6 +182,7 @@ video{
 }
 
 .heading__head h1{
+  margin-top: 14%;
   font-size: 2.9em;
   font-family: 'Quicksand', sans-serif;
   color: #000;
@@ -219,18 +227,28 @@ video{
 .heading__text{
   /* position: absoe; */
   width: 100%;
-  margin-left: 3%;
   size: 20px;
   color: aliceblue;
   /* padding: 0; */
+  margin-left: 10%;
+  margin-top: 5%;
+  margin-bottom: 4%;
+  padding: 0;
 }
+
+
 
 .search {
   display: flex;
   justify-content: space-between;
-  margin: 6% 0 9% 0;
-  border-bottom: 1.8px solid black;
+  margin: 9% 0 9% 0;
+  border-bottom: 2px solid black;
   width: 80%;
+}
+
+.search:hover{
+  border-bottom: 2.3px solid aliceblue;
+  width: 120%;
 }
 
 .middle_bar__search{
@@ -255,6 +273,12 @@ video{
   height: 3.2%;
 }
 
+.search__img:hover{
+  width: 3.4%;
+  height: 3.4%;
+  color: #000;
+}
+
 
 
 
@@ -263,7 +287,7 @@ video{
 .nav .map{
   width: 100vw;
   /* position: fixed; */
-  margin: 0 0 9% 0 ;
+  margin: 0 ;
   padding-top: 1%;
   display: flex;
   flex-flow: row nowrap;
@@ -276,20 +300,25 @@ video{
 
 .nav .map .links{
   display: flex;
-
   justify-content: flex-end;
   /* right: 0; */
   align-items: center;
-  margin: 0 0 0 16%;
+  margin: 0 16% 0 16%;
 }
 
 
 
-.nav .map .link{
+.nav .map .link a{ 
   color: aliceblue;
   text-decoration: none;
+  list-style-type: none;
   font-size: large;
-  margin: 0 5% 0 5%;
+  /* margin: 0 10% 0 10%; */
+  padding: 0;
+}
+
+.nav .map .link {
+  margin: 0 10% 0 10%;
 }
 
 .nav .map .link:hover{
@@ -297,6 +326,21 @@ video{
   border-bottom: 1px white solid;
 
 }
+
+ .links #sign_up{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 20px;
+    width: 120%;
+    margin-right: 15%;
+    text-decoration: none;
+    border: black solid 5px; 
+    border-radius: 45px;
+    padding:2.3% 18%; 
+    /* background: #000; */
+  }
 
 
 
@@ -437,31 +481,11 @@ video{
   margin: 0 0 1% 0;
 }
 
-/* @media only screen and (min-height:1200px){
-    .nav{
-        background-image: url(img/headerBig.jpg);
-        height: 65vh;
-    }
-    h1{
-        font-size: 3.2em;
-    }
-} */
+
 
 
 /* JUST FOR WORKING */
-  .nav .map {
-    margin: 0;
-    
-  }
-  .nav .map .links{
-    margin: 0 0 0 7%;
-  }
 
+  
 
-  .heading__text{
-    margin-left: 10%;
-    margin-top: 5%;
-    margin-bottom: 4%;
-    padding: 0;
-    
-  }
+  
