--- a/Sinai/style.css
+++ b/Sinai/style.css
@@ -304,6 +304,28 @@ video{
   /* right: 0; */
   align-items: center;
   margin: 0 16% 0 16%;
+  text-decoration: none;
+  list-style-type: none;
+}
+
+#sign_up{
+  text-decoration: none;
+  color: aliceblue;
+  margin: 1.5% 11% 2% 0;
+  padding: 1.15% 3% 1.15% 3%;
+  border: solid aliceblue;
+  border-radius: 42px;
+  white-space: nowrap;
+  font-size: 20px;
+  /* doesn't allow the second word to be transfered on the next line */
+}
+
+#sign_up:hover{
+  font-size: 22px;
+  margin-right: 10.8%;
+  padding: 1.16% 3.01% 1.16% 3.01%;
+  border: black 1.9px solid;
+
 }
 
 
