--- a/Sinai/adaptive_halfscreen.css
+++ b/Sinai/adaptive_halfscreen.css
@@ -10,8 +10,34 @@
     
   }
   .nav .map .links{
-    margin: 0 0 0 7%;
+    margin: 0 5% 0 5%;
   }
+
+  .nav .map .link {
+  margin: 0 5% 0 5%;
+}
+
+  #sign_up{
+    padding: 2.5% 3.2% 0% 3.2%;
+    margin-top:3%;
+    margin-bottom: 3%;
+    margin-right: 9%;
+  }
+
+  #sign_up:hover{
+    border: black 1.9px solid;
+    margin-top:3%;
+    margin-bottom: 3%;
+    margin-right: 9%;
+    padding: 2.5% 3.2% 0% 3.2%;
+    text-decoration: none;
+    border-radius: 42px;
+    white-space: nowrap;
+    font-size: 20px;
+  }
+
+
+
 
   .heading h1{
     margin-top: 30%;
