--- a/Sinai/style.css
+++ b/Sinai/style.css
@@ -8,7 +8,7 @@ body {
   /* background-color: rgb(44, 42, 56); */
   /* background-image: url(img/seif-amr-UGX0M-c0jww-unsplash.jpg); */
   /* background-size: contain; */
-  background-color:  #F0A04B;
+  background-color: #f0a04b;
   /* color: white; */
   font-size: 18px;
   /* box-sizing: content-box; */
@@ -18,13 +18,12 @@ body {
 }
 
 @media all {
-  body{
+  body {
     overflow-x: hidden;
   }
-  
 }
 
-video{
+video {
   position: absolute;
   width: 100vw;
   flex-shrink: 1;
@@ -33,19 +32,17 @@ video{
   z-index: -10;
 }
 
-
 /* .container {
   /* z-index: -10; */
-  /* background-color: #FEFBE9;
+/* background-color: #FEFBE9;
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
   margin: 9.675%  16% 0 16%;
   box-sizing: content-box; */
-  /* width: 100%; */
-  /* height: 100vh; */
-  /* padding: 0 15%; */
-
+/* width: 100%; */
+/* height: 100vh; */
+/* padding: 0 15%; */
 
 .nav {
   box-sizing: border-box;
@@ -64,7 +61,7 @@ video{
   right: 0;*/
 }
 
-.nav .middle_bar{
+.nav .middle_bar {
   top: 0;
   display: flex;
 
@@ -87,7 +84,7 @@ video{
   border-left: #000 2.5px solid; */
 }
 
-.middle_bar__sights button{
+.middle_bar__sights button {
   /* height: 100%; */
   width: 100%;
   background-color: transparent;
@@ -104,15 +101,14 @@ video{
   border-right: #000 2.0px solid; */
 }
 
-.middle_bar__sights button:hover, .middle_bar__tours button:hover{
+.middle_bar__sights button:hover,
+.middle_bar__tours button:hover {
   /* background-color: #000; */
   /* opacity: 0.95; */
   flex-basis: 100%;
   color: #000;
   font-size: 15.19px;
 }
-
-
 
 .middle_bar__tours {
   display: flex;
@@ -122,16 +118,15 @@ video{
   /* height: 120%; */
   /* height: 100%; */
   width: 17%;
-  
+
   /* border: 2.5px solid white;
   border-bottom: #000 2.5px solid;
   border-left: #000 2.5px solid; */
-  
 
   margin-right: 3%;
 }
 
-.middle_bar__tours button{
+.middle_bar__tours button {
   /* height: 100%; */
   width: 100%;
   background-color: transparent;
@@ -148,12 +143,11 @@ video{
   border-right: #000 2.0px solid; */
 }
 
-
-.nav .middle_bar .heading{
+.nav .middle_bar .heading {
   width: 50%;
   height: 100%;
   display: flex;
-  flex-flow: column ;
+  flex-flow: column;
   justify-content: center;
   align-items: center;
   /* margin-top: 30%; */
@@ -170,33 +164,31 @@ video{
   box-sizing: content-box;
 }
 
-
-.heading__head{
+.heading__head {
   width: 83%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.heading__head h1{
+.heading__head h1 {
   margin-top: 14%;
   font-size: 2.9em;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   color: #000;
 }
 
-
-.midle_bar__button{
+.midle_bar__button {
   width: 83%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.heading__button{
+.heading__button {
   background-color: transparent;
   /* background-color: rgba(0, 0, 0, 0.5); */
-  
+
   /* opacity: 0.62; */
   font-family: "Gloock";
   /* font-size: 18px; */
@@ -210,18 +202,15 @@ video{
   /* bottom: none; */
   font-size: 22px;
   margin: 5% 0 4% 0;
-  
-  
 }
 
-.heading__button:hover{
-  
+.heading__button:hover {
   color: black;
   border: black 1.7px solid;
   background-color: #fff;
 }
 
-.heading__text{
+.heading__text {
   /* position: absoe; */
   width: 100%;
   size: 20px;
@@ -233,8 +222,6 @@ video{
   padding: 0;
 }
 
-
-
 .search {
   display: flex;
   justify-content: space-between;
@@ -243,12 +230,12 @@ video{
   width: 80%;
 }
 
-.search:hover{
+.search:hover {
   border-bottom: 2.3px solid aliceblue;
   width: 120%;
 }
 
-.middle_bar__search{
+.middle_bar__search {
   background-color: none;
   color: white;
   background: transparent;
@@ -256,46 +243,38 @@ video{
   outline: none;
   font-size: 1em;
   width: 100%;
-  
 }
 
-.middle_bar__search::placeholder{
+.middle_bar__search::placeholder {
   color: black;
   font-style: normal;
   font-size: 15px;
 }
 
-.search__img{
+.search__img {
   width: 3.2%;
   height: 3.2%;
 }
 
-.search__img:hover{
+.search__img:hover {
   width: 3.4%;
   height: 3.4%;
   color: #000;
 }
 
-
-
-
-
-
-.nav .map{
+.nav .map {
   width: 100vw;
   /* position: fixed; */
-  margin: 0 ;
+  margin: 0;
   padding-top: 1%;
   display: flex;
   flex-flow: row nowrap;
-  background-color:rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   /* background-color: black; */
   /* opacity: 0.62; */
 }
 
-
-
-.nav .map .links{
+.nav .map .links {
   display: flex;
   justify-content: flex-end;
   /* right: 0; */
@@ -305,7 +284,7 @@ video{
   list-style-type: none;
 }
 
-#sign_up{
+#sign_up {
   text-decoration: none;
   color: aliceblue;
   margin: 1.5% 11% 2% 0;
@@ -317,17 +296,14 @@ video{
   /* doesn't allow the second word to be transfered on the next line */
 }
 
-#sign_up:hover{
-  font-size: 22px;
-  margin-right: 10.8%;
-  padding: 1.16% 3.01% 1.16% 3.01%;
-  border: black 1.9px solid;
-
+#sign_up:hover {
+  /* font-size: 20px; */
+  /* margin-right: 10.8%; */
+  padding: 1.16% 3.01% 1.14% 3.01%;
+  border: black 2.5px solid;
 }
 
-
-
-.nav .map .link a{ 
+.nav .map .link a {
   color: aliceblue;
   text-decoration: none;
   list-style-type: none;
@@ -340,51 +316,44 @@ video{
   margin: 0 10% 0 10%;
 }
 
-.nav .map .link:hover{
+.nav .map .link:hover {
   /* color: black; */
   border-bottom: 1px white solid;
-
 }
 
- .links #sign_up{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    font-size: 20px;
-    width: 120%;
-    margin-right: 15%;
-    text-decoration: none;
-    border: black solid 5px; 
-    border-radius: 45px;
-    padding:2.3% 18%; 
-    /* background: #000; */
-  }
+.links #sign_up {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 20px;
+  width: 120%;
+  margin-right: 15%;
+  text-decoration: none;
+  border: black solid 5px;
+  border-radius: 45px;
+  padding: 2.3% 18%;
+  /* background: #000; */
+}
 
-
-
-.nav .map .logo{
+.nav .map .logo {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 50%;  
+  width: 50%;
   padding-left: 10%;
   font-family: "Anton";
   font-size: 33px;
 }
 
-.nav .map .logo p{
+.nav .map .logo p {
   color: white;
 }
-
-
 
 /* add */
 /* links' */
 /* animation */
 /* !!! */
-
-
 
 /* #black {
   color: black;
@@ -395,11 +364,4 @@ video{
   margin: 2% 0 0 0;
 } */
 
-
-
-
 /* JUST FOR WORKING */
-
-  
-
-  
